Report number of blocks.

--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -256,9 +256,14 @@ Numbers of blocks
 -----------------
 
 ```{r lengths}
-sapply(gbs,  length)
-sapply(coa,  length)
-sapply(coa2, length)
+rbind(
+  gbs     = sapply(gbs, length),
+  unal    = sapply(unal, length),
+  coa     = sapply(coa, length),
+  unmap   = sapply(unmap, length),
+  unalMap = sapply(unalMap, length),
+  coa2    = sapply(coa2, length)
+)
 ```
 
 Summary
