--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -292,92 +292,10 @@ ggplot(reps_coa |> tidyr::pivot_longer(c("mapped", "unmapped"))) +
   geom_point(aes(col = pairname))
 ```
 
-## Repeat annotations
-
-```{r repeat_annotations}
-reps_in <- list()
-reps_in$total <- sapply(Oki_pairs, \(.) table(reps$Class)) 
-reps_in$unal <- sapply(unal[Oki_pairs], \(gb) {
-    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
-    table(ov$Class)
-  })
-reps_in$gbs <- sapply(gbs[Oki_pairs], \(gb) {
-    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
-    table(ov$Class)
-  })
-reps_in$unmap <- sapply(unmap[Oki_pairs], \(gb) {
-    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
-    table(ov$Class)
-  })
-reps_in$map <- sapply(coa[Oki_pairs], \(gb) {
-    ov <- subsetByOverlaps(reps, gb, ignore.strand = TRUE)
-    table(ov$Class)
-  })
-
-toLong <- function(m, Region = NULL) {
-  m <- tibble::as_tibble(m, rownames = "Class") |>
-    tidyr::pivot_longer(c("Oki_Osa", "Oki_Bar", "Oki_Aom", "Oki_Nor"))
-  if (! is.null(Region))
-    m <- dplyr::mutate(m, Region = Region)
-  m
-}
-
-reps_in.norm <- lapply(reps_in, \(x) x / reps_in$total)
-
-
-reps_in.long <- rbind(
-  toLong(reps_in$unmap, "unmap"),
-  toLong(reps_in$map,   "map"),
-  toLong(reps_in$gbs,   "gbs"),
-  toLong(reps_in$unal, "unal")
-)
-
-reps_in.norm.long <- rbind(
-  toLong(reps_in.norm$unmap, "unmap"),
-  toLong(reps_in.norm$map,   "map"),
-  toLong(reps_in.norm$gbs,   "gbs"),
-  toLong(reps_in.norm$unal, "unal")
-)
-
-ggplot(reps_in.long) +
-  aes(Region, value) +
-  geom_point(aes(col = name)) +
-  facet_grid(~Class, scales = "free")
-
-ggplot(reps_in.norm.long) +
-  aes(Region, value) +
-  geom_point(aes(col = name)) +
-  facet_grid(~Class, scales = "free") +
-  ylab("Fraction overlaping") +
-  ggtitle("Repeats overlaping with (un)aligned/mapped regions")
-```
-
 
 # Structural variants
 
-## Trivial inversions
-
-### Documentation
-
-Details can be found in `vignette("Introduction to GenomicBreaks", package = "GenomicBreaks")`,
-in `vignette("Structural Variants", package = "GenomicBreaks")`,
-and `?GenomicBreaks::flagInversions`
-
-See also the [vignette](https://bioconductor.org/packages/release/bioc/vignettes/Gviz/inst/doc/Gviz.html)
-of Gviz.
-
-### Number of trivial inversions
-
-More inversions are found after coalescing colinear blocks because of situations
-where `+ - +` was `+ - - +` before collapsing. 
-
-```{r detect_trivial_invertions}
-sapply(gbs, function(gb) sum(flagInversions(gb)$inv))
-sapply(coa, function(gb) sum(flagInversions(gb)$inv))
-sapply(coa2, function(gb) sum(flagInversions(gb)$inv))
-```
-
-### Width of inverted regions
+## Width of inverted regions
 
 Many inversions are shorter than 1 kbp.
 
@@ -397,7 +315,7 @@ gg_freq_poly(widths$invs) +
   geom_vline(xintercept = 1000)
 ```
 
-### Width of gaps next to the inverted regions
+## Width of gaps next to the inverted regions
 
 ```{r width_of_inversions}
 inv.lgaps <- sapply(coa, leftInversionGaps) |> SimpleList()
