--- a/vignettes/DistanceMeasures.Rmd
+++ b/vignettes/DistanceMeasures.Rmd
@@ -14,7 +14,7 @@ editor_options:
 
 # Purpose
 
-We want to put numbers on visual impressiosn such as:
+We want to put numbers on visual impressions such as:
 
  - There is a lot of scrambling.
  - Aligned regions stay on their chromosome arm.
