--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -191,18 +191,20 @@ gg_freq_poly(widths$coa2 |> subset(chr == "chr1")) +
 
 # Paired comparison of widths in target and query genomes.
 
-
 ```{r paired_width_analysis}
 GBreaks2widthTibble <- function(gb, pair = NULL) {
   df <- as.data.frame(gb)
   if(is.null(df$query.rep)) df$query.rep <- NA
-  tb <- tibble::tibble(target     = df$width,      query     = df$query.width,
-                       target.rep = is.na(df$rep), query.rep = is.na(df$query.rep),
-                       pair = pair)
+  tb <- tibble::tibble(target     = df$width,        query     = df$query.width,
+                       target.rep = ! is.na(df$rep), query.rep = ! is.na(df$query.rep),  # TRUE if overlaps a repeat
+                       pair = pair, Arm = df$Arm)
 }
 
 gbs.w2w     <- do.call(rbind, lapply(names(gbs), \(name) GBreaks2widthTibble(gbs[[name]],     pair = name)))
 unalMap.w2s <- do.call(rbind, lapply(names(gbs), \(name) GBreaks2widthTibble(unalMap[[name]], pair = name)))
+
+table(paste(    gbs.w2w$target.rep,     gbs.w2w$query.rep))
+table(paste(unalMap.w2s$target.rep, unalMap.w2s$query.rep))
 
 ggPlotW2W <- function(tibble) {
   ggplot(tibble) +
@@ -210,14 +212,19 @@ ggPlotW2W <- function(tibble) {
     geom_point(alpha = 0.05) +
     geom_density_2d() +
     scale_x_log10() +
-    scale_y_log10() +
-    facet_wrap(~pair)
+    scale_y_log10()
 }
 
-ggPlotW2W(gbs.w2w) +
+ggPlotW2W(gbs.w2w |> dplyr::filter(!is.na(Arm))) + facet_wrap(~Arm) +
   ggtitle("Width of the target and query aligned regions")
 
-ggPlotW2W(unalMap.w2s) +
+ggPlotW2W(unalMap.w2s |> dplyr::filter(!is.na(Arm))) + facet_wrap(~Arm) +
+  ggtitle("Width of the target and query mapped unaligned regions")
+
+ggPlotW2W(gbs.w2w) + facet_wrap(~pair) +
+  ggtitle("Width of the target and query aligned regions")
+
+ggPlotW2W(unalMap.w2s) + facet_wrap(~pair) +
   ggtitle("Width of the target and query mapped unaligned regions")
 
 ggPlotW2W(gbs.w2w) +
