--- a/vignettes/DistanceMeasures.Rmd
+++ b/vignettes/DistanceMeasures.Rmd
@@ -56,8 +56,8 @@ pairs2table6x3 <- function (x) {
 
 pairs2Kable6x3 <- function (df) df |> pairs2table6x3() |> round(2) |> knitr::kable()
 
-sapply(gbs, synteny_index) |> pairs2Kable6x3()
-sapply(gbs, \(g) swap(g) |> synteny_index()) |> pairs2Kable6x3()
+BiocParallel::bplapply(gbs,                 synteny_index  ) |> pairs2Kable6x3()
+BiocParallel::bplapply(gbs, \(g) swap(g) |> synteny_index()) |> pairs2Kable6x3()
 ```
 
 # Correlation
@@ -69,8 +69,8 @@ intended to be more robust to the presence of uncollapsed haplotypes in the
 _query_ genome but probably needs further testing.
 
 ```{r correlation_index}
-sapply(gbs, correlation_index) |> pairs2Kable6x3()
-sapply(gbs, \(g) swap(g) |> correlation_index()) |> pairs2Kable6x3()
+BiocParallel::bplapply(gbs,                 correlation_index  ) |> pairs2Kable6x3()
+BiocParallel::bplapply(gbs, \(g) swap(g) |> correlation_index()) |> pairs2Kable6x3()
 ```
 
 # Gene Order Conservation
@@ -78,6 +78,6 @@ sapply(gbs, \(g) swap(g) |> correlation_index()) |> pairs2Kable6x3()
 See `?GOC` for details.
 
 ```{r goc_index}
-sapply(gbs, GOC) |> pairs2Kable6x3()
-sapply(gbs, \(g) swap(g) |> GOC()) |> pairs2Kable6x3()
+BiocParallel::bplapply(gbs,                 GOC  ) |> pairs2Kable6x3()
+BiocParallel::bplapply(gbs, \(g) swap(g) |> GOC()) |> pairs2Kable6x3()
 ```
