--- a/vignettes/DistanceMeasures.Rmd
+++ b/vignettes/DistanceMeasures.Rmd
@@ -75,7 +75,7 @@ BiocParallel::bplapply(gbs, \(g) swap(g) |> correlation_index()) |> pairs2Kable6
 
 # Gene Order Conservation
 
-See `?GOC` for details.
+See `?GenomicBreaks::GOC` for details.
 
 ```{r goc_index}
 BiocParallel::bplapply(gbs,                 GOC  ) |> pairs2Kable6x3()
